# lazuli

./: README.md
doc/: protocol.tex
semi-honest-ecdsa/: Cargo.toml
semi-honest-ecdsa/src/: main.rs  scalars.rs  util.rs
semi-honest-ecdsa/src/protocol/: mod.rs  receiver.rs  sender.rs
semi-honest-ecdsa/src/protocol/ecdsa/: mod.rs  tests.rs  twopc.rs  util.rs
semi-honest-ecdsa/src/protocol/mult/: mod.rs  receiver.rs  sender.rs  tests.rs
semi-honest-ecdsa/src/protocol/ot/: receiver.rs  sender.rs  tests.rs
