[package]
name = "semi-honest-ecdsa"
version = "0.1.0"
authors = ["Jeremy Rubin <j@rubin.io>"]
description = "N-Party ECDSA Algorithm"
edition = "2018"
license = "MPL-2.0"
categories = ["algorithms", "cryptography"]
repository = "https://github.com/JeremyRubin/semihonest-ecdsa"
[dependencies]
secp256k1 = "0.11.2"
rand = "0.5"
sha2 = "0.8.0"
